ags (3.2.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-play-lv2 to handle note-on correctly
	* fixed ags-play-dssi to handle note-on correctly

ags (3.2.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented LV2_OPTIONS__options
	* fixed LV2_OPTIONS__interface URI
	* fixed ags_math_util_test.c to use ags_strv_equal()

ags (3.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* exported missing symbols

ags (3.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted GLib dependency to version 2.56.0
	* refactored AgsAudio, AgsChannel, AgsRecycling and AgsAudioSignal to use property for some setter functions
	* minor improvements

ags (3.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved introspection annotations of AgsGui

ags (3.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_strv_equal() comparing unsorted string vectors
	* disabled GMainLoop integration of AgsTaskLauncher in AgsAudioApplicationContext

ags (3.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented some getter and setter functions
	* disabled GMainLoop integration of AgsTaskLauncher in AgsXorgApplicationContext
	* updated developer manual
	* improved API of AgsMidiBuilder and AgsMidiParser
	* minor improvements

ags (3.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential integer overflow in ags_osc_front_controller_do_request()
	* minor improvements

ags (3.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_automation_meta.c channel_type variable to use proper GType

ags (3.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated user manual

ags (3.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-in-progress implemented getter and setter functions of properties
	* implemented meta widget of AgsNotationEditor